src/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.8.0\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Users\Erik\Desktop\Euchre\src
-d
C:\Users\Erik\Desktop\Euchre\src\doc
-encoding
windows-1252
-charset
windows-1252
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\Erik\Desktop\Euchre\src\com\wolf\euchre\Game.java
<---- end of javadoc command ---->
Loading source file C:\Users\Erik\Desktop\Euchre\src\com\wolf\euchre\Game.java...
Constructing Javadoc information...
Standard Doclet version 1.8.0
Building tree for all the packages and classes...
Generating C:\Users\Erik\Desktop\Euchre\src\doc\com\wolf\euchre\Game.html...
Generating C:\Users\Erik\Desktop\Euchre\src\doc\com\wolf\euchre\package-frame.html...
Generating C:\Users\Erik\Desktop\Euchre\src\doc\com\wolf\euchre\package-summary.html...
Generating C:\Users\Erik\Desktop\Euchre\src\doc\constant-values.html...
C:\Users\Erik\Desktop\Euchre\src\com\wolf\euchre\MainActivity.java:3: error: package android.os does not exist
import android.os.Bundle;
                 ^
C:\Users\Erik\Desktop\Euchre\src\com\wolf\euchre\MainActivity.java:4: error: package android.app does not exist
import android.app.Activity;
                  ^
C:\Users\Erik\Desktop\Euchre\src\com\wolf\euchre\MainActivity.java:5: error: package android.view does not exist
import android.view.Menu;
                   ^
C:\Users\Erik\Desktop\Euchre\src\com\wolf\euchre\MainActivity.java:7: error: cannot find symbol
public class MainActivity extends Activity {
                                  ^
  symbol: class Activity
C:\Users\Erik\Desktop\Euchre\src\com\wolf\euchre\MainActivity.java:10: error: cannot find symbol
    protected void onCreate(Bundle savedInstanceState) {
                            ^
  symbol:   class Bundle
  location: class MainActivity
C:\Users\Erik\Desktop\Euchre\src\com\wolf\euchre\MainActivity.java:17: error: cannot find symbol
    public boolean onCreateOptionsMenu(Menu menu) {
                                       ^
  symbol:   class Menu
  location: class MainActivity
Building index for all the packages and classes...
Building index for all classes...
Generating C:\Users\Erik\Desktop\Euchre\src\doc\allclasses-frame.html...
Generating C:\Users\Erik\Desktop\Euchre\src\doc\allclasses-noframe.html...
Generating C:\Users\Erik\Desktop\Euchre\src\doc\index.html...
Generating C:\Users\Erik\Desktop\Euchre\src\doc\stylesheet.css...
6 errors
